--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         }
     },
     "require": {
+        "ext-pcntl": "*",
         "mez/queuejitsu-cli": "^0.1.6",
         "mez/queuejitsu-scheduler": "^0.2.2",
         "roave/security-advisories": "dev-master",
