--- a/composer.json
+++ b/composer.json
@@ -1,52 +1,50 @@
 {
-    "name": "mez/queuejitsu-scheduler-cli",
-    "description": "QueueJitsu Scheduler CLI",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Martin Meredith",
-            "email": "martin@sourceguru.net"
-        }
-    ],
-    "config": {
-        "sort-packages": true,
-        "optimize-autoloader": true,
-        "preferred-install": {
-            "stickee/*": "source",
-            "mez/*": "source",
-            "*": "dist"
-        }
-    },
-    "require": {
-        "ext-pcntl": "*",
-        "mez/queuejitsu-cli": "^0.1.6",
-        "mez/queuejitsu-scheduler": "^0.2.2",
-        "roave/security-advisories": "dev-master",
-        "symfony/console": "^3.3",
-        "zendframework/zend-config-aggregator": "^1.0",
-        "zfcampus/zf-development-mode": "^3.1"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.4",
-        "jakub-onderka/php-parallel-lint": "^0.9.2 || ^1.0.0",
-        "nikic/php-parser": "^3.1",
-        "phpmd/phpmd": "^2.6",
-        "phpro/grumphp": "^0.11.6 || ^0.15.0 || ^0.16.0",
-        "phpstan/phpstan": "^0.8.3 || ^0.9.0",
-        "povils/phpmnd": "^1.1 || ^2.0",
-        "predis/predis": "^1.1",
-        "sebastian/phpcpd": "^3.0 || ^4.0",
-        "sensiolabs/security-checker": "^4.1 || ^6.0",
-        "squizlabs/php_codesniffer": "^3.0",
-        "vlucas/phpdotenv": "^2.4 || ^3.0 || ^5.0",
-        "zendframework/zend-servicemanager": "^3.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "QueueJitsu\\Scheduler\\Cli\\": [
-                "src"
-            ]
-        }
+  "name": "mez/queuejitsu-scheduler-cli",
+  "type": "library",
+  "description": "QueueJitsu Scheduler CLI",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Martin Meredith",
+      "email": "martin@sourceguru.net"
     }
+  ],
+  "require": {
+    "ext-pcntl": "*",
+    "mez/queuejitsu-cli": "^0.1.6",
+    "mez/queuejitsu-scheduler": "^0.2.2",
+    "symfony/console": "^3.3",
+    "zendframework/zend-config-aggregator": "^1.0"
+  },
+  "require-dev": {
+    "ergebnis/composer-normalize": "^2.6",
+    "friendsofphp/php-cs-fixer": "^2.16",
+    "nikic/php-parser": "^4.6",
+    "php-parallel-lint/php-parallel-lint": "^1.2",
+    "phpro/grumphp-shim": "^0.19.1",
+    "phpstan/phpstan": "^0.12.32",
+    "phpunit/phpunit": "^8.5",
+    "predis/predis": "^1.1",
+    "roave/security-advisories": "dev-master",
+    "sensiolabs/security-checker": "^6.0",
+    "squizlabs/php_codesniffer": "^3.5",
+    "zendframework/zend-servicemanager": "^3.3",
+    "zfcampus/zf-development-mode": "^3.1"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": {
+      "stickee/*": "source",
+      "mez/*": "source",
+      "*": "dist"
+    },
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "QueueJitsu\\Scheduler\\Cli\\": [
+        "src"
+      ]
+    }
+  }
 }
