--- a/composer.json
+++ b/composer.json
@@ -12,25 +12,23 @@
   "require": {
     "php": "^7.2",
     "ext-pcntl": "*",
-    "mez/queuejitsu-cli": "^0.1.6",
-    "mez/queuejitsu-scheduler": "^0.2.2",
-    "symfony/console": "^3.3",
-    "zendframework/zend-config-aggregator": "^1.0"
+    "laminas/laminas-config-aggregator": "^1.0",
+    "mez/queuejitsu-cli": "^0.2",
+    "mez/queuejitsu-scheduler": "^0.2.2 || ^0.3",
+    "symfony/console": "^5.1"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.6",
     "friendsofphp/php-cs-fixer": "^2.16",
+    "laminas/laminas-development-mode": "^3.2",
+    "laminas/laminas-servicemanager": "^3.4",
     "nikic/php-parser": "^4.6",
     "php-parallel-lint/php-parallel-lint": "^1.2",
     "phpro/grumphp-shim": "^0.19.1",
     "phpstan/phpstan": "^0.12.32",
-    "phpunit/phpunit": "^8.5",
     "predis/predis": "^1.1",
     "roave/security-advisories": "dev-master",
-    "sensiolabs/security-checker": "^6.0",
-    "squizlabs/php_codesniffer": "^3.5",
-    "zendframework/zend-servicemanager": "^3.3",
-    "zfcampus/zf-development-mode": "^3.1"
+    "sensiolabs/security-checker": "^6.0"
   },
   "config": {
     "optimize-autoloader": true,
